fix/etapa2: Some fixes in CI and code reliability